# swagger.yaml
@@ -383,6 +383,26 @@ paths:
           schema:
             type: string
           description: Successful
+  '/bff/v2/servicejourney/{id}/calls':
+    get:
+      summary: Get ServiceJourney including EstimatedCalls
+      operationId: getBffV2ServicejourneyIdCalls
+      parameters:
+        - type: string
+          name: id
+          in: path
+          required: true
+        - type: string
+          format: date
+          name: date
+          in: query
+      tags:
+        - bff
+      responses:
+        default:
+          schema:
+            type: string
+          description: Successful
   '/bff/v2/servicejourney/{id}/polyline':
     get:
       summary: Get Map info for a serviceJourney
